lox-tests/tests/string/error_after_multiline.stderr
ERROR: Undefined variable name 'err'
 --> 7:1
  |
7 | err; // // expect runtime error: Undefined variable 'err'.
  | ^-^
